[workspace]
members = ["mors/common", "mors/core", "mors/encrypt", "mors/memtable", "mors/skip_list", "mors/sstable", "mors/traits", "mors/wal"]
resolver="2"

[workspace.package]
authors = ["chenshiming <2584139809@qq.com>"]
edition = "2021"
license = "Apache-2.0"
readme = "README.md"
version = "0.1.0"


[workspace.lints.clippy]
# Detects large stack-allocated futures that may cause stack overflow crashes (see threshold in clippy.toml)
large_futures = "warn"

[workspace.lints.rust]
unused_imports = "deny"

[workspace.dependencies]
mors-core={path = "mors/core",version ="0.1"}
mors-memtable={path = "mors/memtable",version ="0.1"}
mors-sstable={path = "mors/sstable",version ="0.1"}
mors-common={path = "mors/common",version ="0.1"}
mors-traits={path = "mors/traits",version ="0.1"}
mors-skip_list={path = "mors/skip_list",version ="0.1"}
mors-encrypt={path = "mors/encrypt",version ="0.1"}
mors-wal={path = "mors/wal",version ="0.1"}
memmap2 = "0.9"
criterion = "0.5"
log = "0.4"
tracing = "0.1.37"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
anyhow = "1"
thiserror = "1"
libc = "0.2"
rustix="0.38"
bytes = "1"
prost = "0.12"
crc32fast = "1.3"
lazy_static = "1.4.0"
moka = { version = "0.12.1", features = ["sync", "future"] }
aes-gcm-siv = { version = "0.11.1" }
aes-gcm = { version = "0.10" }
aead = "0.5.2"
getrandom = "0.2.10"
flatbuffers = "24"
xxhash-rust = { version = "0.8.7", features = ["xxh64", "xxh3"] }
snap = "1.1.0"
zstd = "0.13"
rand = "0.8.5"
integer-encoding = "4.0.0"
ahash = "*"
either = "1.9.0"

smallvec = "1.11.1"
bitflags = "2.4.0"
scopeguard = "1.2.0"
parking_lot = "0.12.1"
async-channel = "2.0.0"
num_cpus = "1.16.0"
rayon = "1.8.0"
prost-build = "0.12.6"
