[workspace]
members = [
    "common",
    "core",
    "encrypt",
    "levelctl",
    "memtable",
    "skip_list",
    "sstable",
    "traits",
    "txn",
    "wal",
]
resolver = "2"

[workspace.package]
authors = ["chenshiming <2584139809@qq.com>"]
edition = "2021"
license = "Apache-2.0"
readme = "README.md"
version = "0.1.0"


[workspace.lints.clippy]
# Detects large stack-allocated futures that may cause stack overflow crashes (see threshold in clippy.toml)
large_futures = "warn"

[workspace.lints.rust]
unused_imports = "deny"

[workspace.dependencies]
mors-core = { path = "core", version = "0.1" }
mors-memtable = { path = "memtable", version = "0.1" }
mors-sstable = { path = "sstable", version = "0.1" }
mors-common = { path = "common", version = "0.1" }
mors-traits = { path = "traits", version = "0.1" }
mors-skip_list = { path = "skip_list", version = "0.1" }
mors-encrypt = { path = "encrypt", version = "0.1" }
mors-wal = { path = "wal", version = "0.1" }
mors-levelctl = { path = "levelctl", version = "0.1" }
mors-txn = { path = "txn", version = "0.1" }

aes-gcm = { version = "0.10" }
aes-gcm-siv = { version = "0.11.1" }
ahash = "*"
anyhow = "1"
aead = "0.5.2"
async-channel = "2.0.0"
bitflags = "2.4.0"
bytes = "1"
crc32fast = "1.3"
criterion = "0.5"
either = "1.9.0"
flatbuffers = "24"
flatc-rust = "0.2.0"
getrandom = "0.2.10"
integer-encoding = "4.0.0"
lazy_static = "1.4.0"
libc = "0.2"
log = "0.4"
moka = { version = "0.12.1", features = ["sync", "future"] }
memmap2 = "0.9"
num_cpus = "1.16.0"
parking_lot = "0.12.1"
prost = "0.12"
prost-build = "0.12.6"
rand = "0.8.5"
rayon = "1.8.0"
rustix = "0.38"
scopeguard = "1.2.0"
smallvec = "1.11.1"
snap = "1.1.0"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
tracing = "0.1.37"
xxhash-rust = { version = "0.8.7", features = ["xxh64", "xxh3"] }
zstd = "0.13"
