[package]
name = "mors-common"
authors.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
version.workspace = true
[features]
sync = []
[dependencies]
lazy_static = { workspace = true }
libc = { workspace = true }
rustix = { workspace = true, features = ["std", "mm", "fs"] }
memmap2 = { workspace = true }
getrandom = { workspace = true }
bytes = { workspace = true }
snap = { workspace = true }
zstd = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
parking_lot = { workspace = true }
pretty-hex = { workspace = true }
rayon = { workspace = true }
num_cpus = { workspace = true }
log = { workspace = true }
rand = { workspace = true }
sha2 = { workspace = true }
integer-encoding = { workspace = true }
bitflags = { workspace = true }
# proc-macro2 = { workspace = true }
[dev-dependencies]
criterion = { workspace = true, features = ["html_reports"] }
crc32fast = { workspace = true }
tokio = { workspace = true }
[[bench]]
name = "io"
harness = false
# [[bench]]
# name = "checksum"
# harness = false
