[package]
name = "core"
authors.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true

[lints]
workspace = true

[dependencies]
mors-common = { workspace = true }
mors-traits = { workspace = true }
mors-encrypt = { workspace = true }
mors-levelctl = { workspace = true }
mors-memtable = { workspace = true }
mors-skip_list = { workspace = true }
mors-sstable = { workspace = true }
mors-txn = { workspace = true }
mors-wal = { workspace = true }
mors-vlog = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true, features = ["full"] }
log = { workspace = true }
parking_lot = { workspace = true }
env_logger = "0.11.3"
crc32fast = {workspace = true}
[dev-dependencies]
console-subscriber = "0.3.0"
[[example]]
name = "simple"
path = "examples/simple.rs"
