[package]
name = "mors-levelctl"
authors.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
version.workspace = true

[dependencies]
mors-traits = { workspace = true }
mors-common = { workspace = true }
thiserror = { workspace = true }
bytes = { workspace = true }
crc32fast = { workspace = true }
prost = { workspace = true }
parking_lot = { workspace = true }
log = { workspace = true }
tabled = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
bytesize = "1.3.0"
rand = { workspace = true }
[dev-dependencies]
tempfile = { workspace = true }
env_logger = { workspace = true }
mors-sstable = { workspace = true }
mors-encrypt = { workspace = true }
mors-vlog = { workspace = true }
[build-dependencies]
prost-build = { workspace = true }
[lints]
workspace = true
