[package]
name = "mors-skip_list"
authors.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
version.workspace = true


[dependencies]
mors-common = { workspace = true }
mors-traits = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }
log = { workspace = true }
[lints]
workspace = true
