[package]
name = "mors-sstable"
authors.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
version.workspace = true

[features]
default = ["sync"]
sync = ["moka/sync"]
[dependencies]
mors-common = { workspace = true }
mors-traits = { workspace = true }
prost = { workspace = true }
thiserror = { workspace = true }
memmap2 = { workspace = true }
bytes = { workspace = true }
crc32fast = { workspace = true }
xxhash-rust = { workspace = true }
flatbuffers = { workspace = true }
log = { workspace = true }
moka = { workspace = true, features = ["sync", "future"] }
tokio = { workspace = true }

[build-dependencies]
prost-build = { workspace = true }
flatc-rust = { workspace = true }

[dev-dependencies]
rand = { workspace = true }
sha2 = { workspace = true }
mors-encrypt = { workspace = true }
[lints]
workspace = true

[[example]]
name = "simple"
path = "examples/simple.rs"
