[package]
name = "mors-sstable"
authors.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
version.workspace = true

[features]
default = ["sync"]
sync = ["moka/sync"]
[dependencies]
mors-common = { workspace = true }
mors-traits = { workspace = true }
mors-wal = { workspace = true }
prost = { workspace = true }
thiserror = { workspace = true }
memmap2 = { workspace = true }
bincode = { workspace = true }
bytes = { workspace = true }
bytesize = { workspace = true }
crc32fast = { workspace = true }
xxhash-rust = { workspace = true }
log = { workspace = true }
moka = { workspace = true, features = ["sync", "future"] }
serde = { workspace = true ,features = ["derive"] }
tokio = { workspace = true }

[build-dependencies]
prost-build = { workspace = true }
flatc-rust = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full", "tracing"] }
tempfile = { workspace = true }
rand = { workspace = true }
sha2 = { workspace = true }
mors-encrypt = { workspace = true }
env_logger = { workspace = true }
proptest = { workspace = true }
criterion = { workspace = true, features = ["html_reports", "async_tokio"] }
crc32fast = { workspace = true }

[lints]
workspace = true

[[bench]]
name = "build"
harness = false

[[example]]
name = "simple"
path = "examples/simple.rs"
