[package]
name = "mors-traits"
authors.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
version.workspace = true


[dependencies]
thiserror = { workspace = true }
bytes = { workspace = true }
integer-encoding = { workspace = true }
lazy_static = { workspace = true }
# mors-wal= { workspace = true }
mors-common = { workspace = true }
# mors-encrypt = { workspace = true }