[package]
name = "mors-wal"
authors.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
version.workspace = true

[dependencies]
mors-traits = { workspace = true }
mors-common = { workspace = true }
thiserror = { workspace = true }
bytes = { workspace = true }
integer-encoding = { workspace = true }
log = { workspace = true }
crc32fast = { workspace = true }
