[package]
name = "mors-cache"
authors.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
version.workspace = true

[features]
default = []
sync=[]
[dependencies]
mors-traits={workspace=true}
moka = { workspace = true, features = ["sync", "future"] }
thiserror = { workspace = true}
[lints]
workspace = true
