[package]
name = "mors-common"
authors.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
version.workspace = true

[dependencies]
lazy_static = { workspace = true }
libc = { workspace = true }
rustix = { workspace = true ,features = ["std","mm","fs"] }
memmap2 = { workspace = true }
getrandom = { workspace = true }
mors-traits = { workspace = true }
bytes = { workspace = true }

[dev-dependencies]
criterion = { workspace = true, features = ["html_reports"] }

crc32fast = { workspace = true }

tokio = { workspace = true }
[[bench]]
name = "io"
harness = false
# [[bench]]
# name = "checksum"
# harness = false
