[package]
name = "core"
authors.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true

[lints]
workspace = true
[dependencies]
mors-common = { workspace = true }
mors-encrypt = { workspace = true }
mors-traits={workspace=true}
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true, features = ["full"] }