[package]
name = "mors-encrypt"
authors.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
version.workspace = true
[features]
default = ["aes-gcm"]

[dependencies]
prost = { workspace = true }
mors-common = { workspace = true }
mors-traits = { workspace = true }
aes-gcm = { workspace = true, optional = true }
aes-gcm-siv = { workspace = true, optional = true }
aead = { workspace = true }
thiserror = "1.0.61"
libc = "0.2.155"
crc32fast = "1.4.2"
log = "0.4.21"
[build-dependencies]
prost-build = { workspace = true }


