[package]
name = "mors-encrypt"
authors.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
version.workspace = true
[features]
default = ["aes-gcm"]

[dependencies]
prost = { workspace = true }
mors-common = { workspace = true }
mors-traits={workspace=true}
aes-gcm = { workspace = true, optional = true }
aes-gcm-siv = { workspace = true, optional = true }
aead = { workspace = true }
thiserror = { workspace = true }
libc = { workspace = true }
crc32fast = { workspace = true }
log = { workspace = true }
[build-dependencies]
prost-build = { workspace = true }


