[package]
name = "memtable"
authors.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
version.workspace = true

[dependencies]
mors-common = { workspace = true }
mors-traits = { workspace = true }
mors-encrypt = { workspace = true }
mors-wal = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
