[package]
name = "sstable"
authors.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
version.workspace = true


[dependencies]
mors-common={workspace=true}
prost = { workspace = true }

[build-dependencies]
prost-build = { workspace = true }
[lints]
workspace = true
