[package]
name = "mors-traits"
authors.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
version.workspace = true


[dependencies]
thiserror={workspace=true}
bytes = {workspace=true}
bitflags = {workspace=true}
lazy_static = {workspace=true}
integer-encoding = {workspace=true}
