[package]
name = "txn"
authors.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
version.workspace = true

[dependencies]
mors-traits = { workspace = true }
parking_lot={workspace=true}
tokio={workspace=true}
thiserror={workspace=true}
[lints]
workspace = true
