[package]
name = "mors-wal"
authors.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
version.workspace = true

[dependencies]
mors-traits = { workspace = true }
mors-common = { workspace = true }
mors-encrypt = { workspace = true }
thiserror = { workspace = true }
bytes = { workspace = true }
log = "0.4.21"
crc32fast = "1.4.2"
